--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "classnames": "^2.3.1",
     "lodash": "^4.17.21",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-resize-detector": "^6.7.6",
     "react-scripts": "4.0.3",
     "recoil": "^0.4.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
